[package]
name = "heisspot"
license = "MIT"
description = "Tiny Rust WlanAPI library"
readme = "README.md"
version = "0.1.0"
edition = "2021"
keywords = ["network", "async", "windows"]
categories = ["os", "network-programming", "api-bindings", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get-last-error = "0.1.1"
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WiFi",
    "Networking_Connectivity",
    "Foundation_Collections",
    "Devices_WiFi",
    "Foundation"
] }
